--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "4.2.2",
     "chart.js": "^2.9.3",
     "chartkick": "^3.2.0",
+    "highcharts": "^8.1.2",
     "jquery": "^3.4.1",
     "rails-erb-loader": "^5.5.2",
     "turbolinks": "^5.2.0"
