--- a/test/fixtures/expenses.yml
+++ b/test/fixtures/expenses.yml
@@ -1,13 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  type: 
-  concept: MyText
+  type_transaction: 'Purchase'
+  concept: 'Sprite'
   date: 2020-06-08
   amount: 9.99
+  category: one
 
 two:
-  type: 
-  concept: MyText
+  type_transaction: 'Transfer'
+  concept: 'Bit coins'
   date: 2020-06-08
   amount: 9.99
+  category: two
